# aici

./: .dockerignore  .env.example  .gitignore  Dockerfile.webapi  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: pipeline.json
docs/: Cookie_Policy.md  fresh_data_requirements.md  pipeline_run_parameters.md  roadmap.md  ux_ui_design.md  visual_style.md  web_copy_guidelines.md
docs/analytics/: cta_analytics.md
docs/architecture/: auth_cookies.md  auth_schema.md  live_backtest_contract.md
docs/archive/: README.md
docs/archive/analytics/: cta_analytics_contract.md  cta_analytics_final_contour.md  cta_analytics_product_analytics.md
docs/archive/roadmaps/: roadmap_v1.md  roadmap_v2.md  roadmap_v3.md  roadmap_v4.md  roadmap_v5.md  roadmap_v6.md  roadmap_v7.md
docs/guides/: billing.md  environment_variables.md  run_index_simulation.md
docs/update_scripts/: 2026-01-13_crypto_billing.sql  2026-01-18_crypto_enum_uppercase.sql  2026-01-20_token_usage_migration.sql  2026-01-29_index_runs.sql  2026-02-07_index_run_source_uppercase.sql  2026-02-25_cta_analytics_storage.sql  2026-02-27_cta_event_type_and_format.sql  2026-02-27_cta_format_weekly_optimization.sql  2026-04-28_auth_oauth_connections.sql
docs/ux/: account_app_overview.md
requirements/: base.txt  dev.txt  pipeline.txt  webapi.txt
scripts/: build.mjs  check_latest_weights.py  debug_refresh_daily_snapshot.py  docker-entrypoint.sh  run_all_backtest_good_res.py  run_full_backtest.py  snippet.py
scripts/ops/: check_compose_security.py  cta_funnel_selftest.sh
sdk/js/: README.md  index.d.ts  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/aici_sdk/: __init__.py  client.py  errors.py  models.py
src/ai_crypto_index/accounts/: __init__.py  bootstrap.py  db.py  dependencies.py  exceptions.py  models.py  security.py  service.py
src/ai_crypto_index/api/: __main__.py  app.py  dependencies.py  logging_utils.py  models.py  rate_limit.py  serializers.py
tests/: conftest.py  test_backtesting_simulate_index.py  test_covariance_pipeline.py  test_cta_metrics_service.py  test_daily_snapshot.py  test_execution_realism.py  test_index_auto_runs.py  test_live_backtest_data.py  test_monthly_composition.py  test_monthly_job_lock.py  test_performance_refresh.py  test_quick_ab_smoke.py  test_weight_cap_projection.py
tests/api/: test_admin_cta_analytics_api.py  test_api_endpoints.py  test_billing_crypto_flow.py
tests/container/: test_api_smoke.py
tests/frontend/: test_css_lint.py  test_smoke.py
(+82 files in other folders)
