[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ai-crypto-index"
version = "0.1.0"
description = "AI-Powered Crypto Index: clustering, LSTM-based volatility proxy, risk-parity optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ilya Romanenko" }]
keywords = ["crypto", "portfolio", "risk-parity", "lstm", "clustering", "quant"]
dependencies = [
  "SQLAlchemy>=2.0",
  "aiosqlite>=0.19",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic[email]>=2.6",
  "jinja2>=3.1",
  "python-multipart>=0.0.7",
  "itsdangerous>=2.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "bcrypt>=4.1,<5.0",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "tensorflow==2.18.0",
  "yfinance>=0.2",
  "requests>=2.31",
  "stripe>=10.0",
  "httpx>=0.27",
  "authlib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pre-commit>=3.7",
]

[project.scripts]
ai-crypto-index = "ai_crypto_index.pipelines.main:cli"
ai-crypto-index-service = "ai_crypto_index.api.__main__:main"

[project.urls]
Homepage = "https://github.com/ilya-romanenko/AI-Powered_Crypto_Index"
Issues = "https://github.com/ilya-romanenko/AI-Powered_Crypto_Index/issues"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks"]

[tool.ruff.lint]
extend-select = ["I", "E", "F", "UP"]  # isort + pyflakes/pycodestyle + pyupgrade
ignore = ["E501", "I001", "UP035", "UP037", "UP045", "F401", "F841", "E999"]



